--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.7.2",
     "@react-three/fiber": "^9.3.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
